src/styles/Gallery.scss
@import '../utils/_variables.scss';
.gallery {
    min-height: 450px;
    position: relative;
    height: 530px;
    min-width: 300px;
    background-color: $color-1;
    .gallery-main-container {
        position: absolute;
        line-height: 0;
        overflow: hidden;
        white-space: nowrap;
        height: 450px;
        min-height: calc(100% - 80px);
        width: 100%;
    }
    
    .gallery-thumbnails {
        overflow: hidden;
        white-space: nowrap;
        bottom: 0;
        width: 100%;
        position: absolute;
        height: 80px;
    }
    .gallery-main {
        max-height: 450px;
        position: absolute;
        display: inline;
        width: 100%;
        transition: 0.4s ease-in;
        z-index: 2;
        left: 0%;
        @for $i from 2 through 20 {
            &:nth-child(#{$i}) {
                left: calc(calc($i - 2) * 100%);
            }
        }
    }
    &.fullscreen-modal {
        height: 100vh;
        width: 75vw;
        z-index: 8;
        position: fixed;
        margin: 0 auto;
        bottom: 0;
        left: 0;
        right: 0;
        top: 0;
        background-color: $color-1;
        .gallery-main-container {
            height: calc(100vh - 80px);
        }

        .gallery-main {
            max-height: calc(100vh - 80px);
            display: inline;
            position: absolute;
            width: 100%;
            transition: 0.4s ease-in;
            transform: translate3d(100%, 0, 0);

            left: 0;
            @for $i from 2 through 20 {
                &:nth-child(#{$i}) {
                    left: calc(calc($i - 2) * 100%);
                }
            }
        }
        .gallery-icon {
            color: $color-3;
        }
        .gallery-fullscreen {
            height: 110px;
            width: 60px;
        }
    }
    .gallery-thumbnail {
        display: inline;
        box-sizing: border-box;
        margin: 0.1rem 0;
        width: 10%;
        max-height: 80px;
        transform: translate3d(100%, 0, 0)

    }
    .gallery-fullscreen {
        position: absolute;
        height: 50px;
        width: 25px;
        bottom: 2px;
        right: 10px;
    }
    .gallery-icon {
        color: $color-3;
        transition: all 0.3s ease-out;
        background-color: transparent;
        cursor: pointer;
        z-index: 4;
        &:hover, &:focus, &:active {
            color: $color-1;
        }
        svg {
            transition: 0.2s;
            &:hover {
                transform: scale(1.1);
            }
        }
    }
    .thumbnail-active {
        border: 2px solid $color-3;
    }
    .gallery-arrow {
        position: absolute;
        height: 100px;
        width: 50px;
    }
    .arrow-left, .arrow-right {
        top: 50%;
        transform: translateY(-50%);
    }
    .arrow-left {
        left: 0;
    }
    .arrow-right {
        right: 0;
    }
}

